<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey2"
    android:gravity="center">

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_dans_layout"
        android:src="@drawable/logo_rh_or_sf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_msg"
        android:textColor="@color/violet_etrange"
        android:textSize="24sp" />

    <Button
        android:id="@+id/play2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_name" />

</LinearLayout>